blog/namespace-secret-blog.yml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
